--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </label>
 
                 <ul class="nav-links">
-                    <li><a href="#galeria">Galería</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -53,8 +53,7 @@
             </div>
 
             <picture class="responsive-hero">
-                <source srcset="assets/fondo-hero-large.webp" media="(min-width: 1024px)">
-                <img src="assets/fondo-hero.webp" alt="Skatepark Urbano" class="hero-img">
+                <img src="assets/fondo.PNG" alt="Skatepark Urbano" class="hero-img">
             </picture>
 
             <div class="scroll-indicator">
@@ -78,23 +77,6 @@
                         callejero a nivel global.</p>
                 </article>
             </div>
-        </section>
-
-        <section id="galeria" class="grid-container">
-            <article class="card reveal">
-                <img src="assets/skater-transparente.png" alt="Ollie" class="img-transp">
-                <h3>Ollie Master</h3>
-            </article>
-            <article class="card reveal">
-                <img src="assets/detalle.avif" alt="Tabla">
-                <h3>Hardware Pro</h3>
-            </article>
-            <article class="card reveal">
-                <div class="icon-container">
-                    <div class="board-placeholder"></div>
-                </div>
-                <h3>Estilo Urbano</h3>
-            </article>
         </section>
 
         <section class="faq-section reveal">
