Página de contacto y README.md

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skate Flow | Proyecto DIW</title>
+    <title>Skate Flow</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
@@ -27,7 +27,7 @@
                     </svg>
                 </label>
 
-                <input type="checkbox" id="menu-toggle" class="menu-checkbox">
+                <input type="checkbox" id="menu-toggle" class="menu-checkbox" autocomplete="off">
                 <label for="menu-toggle" class="menu-icon">
                     <span></span><span></span><span></span>
                 </label>
@@ -91,15 +91,6 @@
                     <p>Depende de tu estilo. Recomendamos empezar con una tabla estándar de 8.0".</p>
                 </details>
             </div>
-        </section>
-
-        <section id="contacto" class="form-section">
-            <form class="skate-form">
-                <h2>ÚNETE AL CLUB</h2>
-                <input type="text" placeholder="Tu apodo" required>
-                <input type="email" placeholder="Email" required>
-                <button type="submit" class="btn-anim">ENVIAR</button>
-            </form>
         </section>
     </main>
 
