--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería del skate</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
@@ -43,31 +43,18 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="titulo-3d">GALERÍA</h1>
-                <p class="hero-intro">Un vistazo a la cultura del skate.</p>
+                <h1 class="titulo-3d">CONTACTO</h1>
+                <p class="hero-intro">¿Quieres unirte a la comunidad? ¡Contáctanos!</p>
             </div>
 
-            <section id="galeria" class="grid-container">
-                <article class="card reveal">
-                    <img src="assets/olliemaster.webp" alt="Ollie" class="img-transp">
-                    <h3>Ollie Master</h3>
-                    <h4>El salto fundamental que desafía la gravedad.</h4>
-                </article>
-                <article class="card reveal">
-                    <img src="assets/boardslide.webp" alt="Tabla">
-                    <h3>Boardslide</h3>
-                    <h4>Deslizando la tabla sobre el riel con equilibrio.</h4>
-                </article>
-                <article class="card reveal">
-                    <img src="assets/inwardheelflip.webp" alt="Tabla">
-                    <h3>Inward Heelflip</h3>
-                    <h4>Rotación compleja y estilo puro en el aire.</h4>
-                </article>
+            <section id="contacto" class="form-section">
+                <form class="skate-form">
+                    <h2>ÚNETE AL CLUB</h2>
+                    <input type="text" placeholder="Tu apodo" required>
+                    <input type="email" placeholder="Email" required>
+                    <button type="submit" class="btn-anim">ENVIAR</button>
+                </form>
             </section>
-            <div class="scroll-indicator">
-                <span></span>
-            </div>
-        </section>
     </main>
 
     <footer>
