--- a/galeria.html
+++ b/galeria.html
@@ -47,8 +47,14 @@
                 <p class="hero-intro">Un vistazo a la cultura del skate.</p>
             </div>
 
+            <!-- GRID CONTAINER: Contenedor principal para la galería.
+                 Usa CSS Grid para organizar las tarjetas automáticamente en filas y columnas. -->
             <section id="galeria" class="grid-container">
+                <!-- ARTICLE CARD: Cada ítem de la galería es independiente.
+                     La clase 'reveal' activa la animación de entrada al hacer scroll. -->
                 <article class="card reveal">
+                    <!-- IMAGEN CON ALT: El atributo 'alt' es crucial para accesibilidad y SEO.
+                         Describe la imagen si no carga o para lectores de pantalla. -->
                     <img src="assets/olliemaster.webp" alt="Ollie" class="img-transp">
                     <h3>Ollie Master</h3>
                     <h4>El salto fundamental que desafía la gravedad.</h4>
