--- a/index.html
+++ b/index.html
@@ -1,18 +1,40 @@
+<!-- 
+    DOCTYPE: Indica al navegador que este es un documento HTML5 moderno.
+    Ayuda a que los navegadores rendericen la página en "modo estándar" y no en "quirks mode".
+-->
 <!DOCTYPE html>
 <html lang="es">
 
 <head>
+    <!-- Configuración de caracteres UTF-8 para admitir tildes, ñ y símbolos especiales -->
     <meta charset="UTF-8">
+
+    <!-- Viewport: Esencial para el diseño Responsive.
+         width=device-width: el ancho de la web es el ancho del dispositivo.
+         initial-scale=1.0: el nivel de zoom inicial es 1 (sin zoom). -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Skate Flow</title>
+
+    <!-- Vinculamos la hoja de estilos CSS externa -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Favicon: El icono que aparece en la pestaña del navegador -->
     <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
 
 <body>
+    <!-- 
+        HACK DE CSS PARA MODO OSCURO (Checkbox Hack):
+        Usamos un checkbox oculto para controlar el estado del tema.
+        En CSS usaremos 'body:has(.theme-checkbox:checked)' para cambiar las variables de colores.
+        Este input debe estar al principio del body para poder afectar a los hermanos siguientes si no usáramos :has().
+    -->
     <input type="checkbox" id="theme-switch" class="theme-checkbox">
 
+    <!-- HEADER: Elemento semántico para la cabecera del sitio o sección -->
     <header class="header-nav">
+        <!-- NAV: Elemento semántico para los enlaces de navegación principales -->
         <nav>
             <div class="logo">
                 <a href="index.html">
@@ -40,7 +62,10 @@
         </nav>
     </header>
 
+    <!-- MAIN: Contenido principal de la página. Solo debe haber uno por página.
+         Ayuda a los lectores de pantalla a ir directamente al contenido importante. -->
     <main>
+        <!-- SECTION: Agrupa contenido temático. Generalmente tiene un encabezado. -->
         <section id="inicio" class="hero">
             <h1 class="titulo-3d">SKATE FLOW</h1>
             <div class="hero-content">
@@ -52,11 +77,15 @@
                 </p>
             </div>
 
+            <!-- PICTURE: Elemento para "Art Direction" o formatos modernos.
+                 Aquí lo usamos simplemente como contenedor semántico para la imagen principal. -->
             <picture class="responsive-hero">
                 <img src="assets/fondo.PNG" alt="Skatepark Urbano" class="hero-img">
             </picture>
 
             <div class="scroll-indicator">
+                <!-- SVG Inline: Gráficos vectoriales escalables directamente en el HTML.
+                     Permite animar sus partes (como el círculo 'anim-rueda') con CSS. -->
                 <svg viewBox="0 0 100 100" class="anim-rueda">
                     <circle cx="50" cy="50" r="40" stroke="currentColor" stroke-width="8" fill="none"
                         stroke-dasharray="20 10" />
@@ -66,6 +95,7 @@
 
         <section id="cultura" class="info-extra reveal">
             <div class="mision-vision">
+                <!-- ARTICLE: Contenido independiente y autónomo (podría distribuirse por sí solo). -->
                 <article class="mision">
                     <h3>Nuestra Misión</h3>
                     <p>Democratizar el acceso a la cultura urbana ofreciendo recursos, inspiración y tecnología para que
@@ -82,6 +112,8 @@
         <section class="faq-section reveal">
             <div class="faq-container">
                 <h2>Preguntas Frecuentes</h2>
+                <!-- DETAILS y SUMMARY: Elementos nativos de HTML para crear acordeones desplegables
+                     sin necesidad de JavaScript. -->
                 <details>
                     <summary>¿Qué necesito para empezar?</summary>
                     <p>Solo una tabla, ganas de aprender y mucha constancia. El asfalto hará el resto.</p>
@@ -94,6 +126,7 @@
         </section>
     </main>
 
+    <!-- FOOTER: Pie de página con información de copyright, enlaces legales, etc. -->
     <footer>
         <p>2026 | FiksaKoud &copy; | Proyecto DIW Tema 4</p>
     </footer>
