--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="assets/logo.png" alt="Skate Flow" class="logo-img">
+                    <img src="assets/logo.PNG" alt="Skate Flow" class="logo-img">
                 </a>
             </div>
 
