--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Favicon: El icono que aparece en la pestaña del navegador -->
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.PNG">
 </head>
 
 <body>
