--- a/galeria.html
+++ b/galeria.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería del skate</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="assets/logo.PNG">
+    <link rel="icon" type="image/png" href="assets/logo.png">
+    <!-- View Transition -->
+    <meta name="view-transition" content="same-origin">
 </head>
 
 <body>
@@ -16,7 +18,7 @@
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="assets/logo.PNG" alt="Skate Flow" class="logo-img">
+                    <img src="assets/logo.png" alt="Skate Flow" class="logo-img">
                 </a>
             </div>
 
@@ -55,7 +57,7 @@
                 <article class="card reveal">
                     <!-- IMAGEN CON ALT: El atributo 'alt' es crucial para accesibilidad y SEO.
                          Describe la imagen si no carga o para lectores de pantalla. -->
-                    <img src="assets/olliemaster.webp" alt="Ollie" class="img-transp">
+                    <img src="assets/olliemaster.webp" alt="Ollie" class="transp-img">
                     <h3>Ollie Master</h3>
                     <h4>El salto fundamental que desafía la gravedad.</h4>
                 </article>
