--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </p>
             </div>
 
-            <img src="assets/fondo.PNG" alt="Skatepark Urbano" class="portada-img">
+            <img src="assets/fondo.png" alt="Skatepark Urbano" class="portada-img">
 
             <div class="indicador-scroll">
                 <!-- SVG Inline: Gráficos vectoriales escalables directamente en el HTML.
